--- a/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
+++ b/src/app/pages/alumno/student-dashboard/student-dashboard.component.html
@@ -13,7 +13,7 @@
         <div class="container  mx-auto">
             <div class="container-fluid my-3 " *ngIf="isLoaded">
                 <div class="row  justify-content-center">
-                    <a routerLink="../ofertas">
+                    <a routerLink="../interview">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-success dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-success p-3 mx-auto">
@@ -30,7 +30,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a>
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-warning dashboardElement mx-sm-1   dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-warning p-3 mx-auto">
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a>
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-info dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto">
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a>
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2 ">
                             <div class="card border-danger dashboardElement mx-sm-1 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-danger p-3 mx-auto">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a routerLink="../interview">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-success dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-success p-3 mx-auto">
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a routerLink="../interview">
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-warning dashboardElement mx-sm-1   dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-warning p-3 mx-auto">
@@ -115,7 +115,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a>
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2">
                             <div class="card border-info dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto">
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a>
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3 pt-2 ">
                             <div class="card border-danger dashboardElement mx-sm-1 dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-danger p-3 mx-auto">
