--- a/src/app/pages/company/company-dashboard/company-dashboard.component.html
+++ b/src/app/pages/company/company-dashboard/company-dashboard.component.html
@@ -11,7 +11,7 @@
         <div class="container  mx-auto">
             <div class="container-fluid my-3" *ngIf="isLoaded">
                 <div class="row justify-content-center">
-                    <a>
+                    <a routerLink="../ofertas">
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 pt-2">
                             <div class="card border-info dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </a>
-                    <a routerLink="../ofertas">
+                    <a routerLink="../candidatosPendientes">
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 pt-2">
                             <div class="card border-success dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </a>
-                    <a>
+                    <a routerLink="../candidatosAceptados">
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 pt-2">
                             <div class="card border-warning dashboardElement mx-sm-1  dashboardCard justify-content-center">
                                 <div class="rounded-circle shadow text-info p-3 mx-auto ">
