--- a/src/app/pages/alumno/student-interview/student-interview.component.html
+++ b/src/app/pages/alumno/student-interview/student-interview.component.html
@@ -1,83 +1,71 @@
 <div class="d-flex" id="wrapper">
+	<!-- Sidebar -->
+	<app-sidebar></app-sidebar>
 
-    <!-- Sidebar -->
-    <app-sidebar></app-sidebar>
-
-    <!-- Contenido de la pagina -->
-    <div id="page-content-wrapper">
-        <!-- Botón para cerrar el sidebar -->
-        <div class="container my-3" *ngIf="!isLoaded">
-            <app-load-spinner></app-load-spinner>
-        </div>
-        <div class="container mx-auto">
-            <div class="container-fluid my-3" *ngIf="isLoaded">
-                <div class="row justify-content-center">
-                    <div class="col">
-                        <!-- Cuerpo de las ofertas -->
-                        <div class="card w-100 mb-4 shadow">
-                            <div class="card-header bg-secondary">
-                                <div class="d-flex align-items-center">
-                                    <h2 class="card-title text-white font-weight-bold my-2 mr-3">Mis ofertas</h2>
-                                </div>
-                            </div>
-                            <div class="card-body mt-2">
-                                <!-- Oferta -->
-                                <div class="row">
-                                    <!-- Se muestra para las ofertas -->
-                                    <ngb-pagination class="col-12 mb-3" [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true">
-                                    </ngb-pagination>
-                                    <ng-container>
-                                        <div class="col-sm-6" *ngFor="let offer of offers | slice: (page-1) * pageSize : page * pageSize">
-                                            <div class="card m-2 mb-4 border-info shadow" *ngIf="offer.vacant>0 ">
-                                                <div class="card-header bg-info text-white">
-                                                    <h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}
-                                                    </h3>
-                                                    <p class="mb-0">
-                                                        <a class="badge badge-light text-info mr-3 mb-2 text-uppercase pull-right " (click)="viewCompany(offer.companyId)">
-                                                        {{ offer.companyName }}
-                                                    </a>
-                                                        <span class="badge badge-light text-info mr-3 pull-right ">
-                                                        {{ offer.areaDescription }}
-                                                    </span>
-                                                    </p>
-                                                </div>
-                                                <div class="card-body">
-                                                    <div class="row mb-4">
-                                                        <div class="col">
-                                                            <p class="text-primary">
-                                                                Fecha de finalización: {{ offer.endDate }}
-                                                            </p>
-                                                            <p class="card-text">{{ offer.description }}</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="card-footer p-0">
-                                                    <div class="btn-group w-100">
-                                                        <button *ngIf="offer.Joined_by == 0" type="button" title="Desinscribirse de oferta" class="btn btn-danger rounded-0" (click)="unsubscribe(offer.interId)">
-                                                        Desinscribirse
-                                                    </button>
-                                                        <button *ngIf="offer.Joined_by == 1 && offer.interActive == 0" type="button" title="Aceptar oferta" class="btn btn-success rounded-0" (click)="acept(offer.interId)">
-                                                        Aceptar
-                                                    </button>
-                                                        <button *ngIf="offer.Joined_by == 1" title="Desactivar usuario" type="button" class="btn btn-danger rounded-0" (click)="unsubscribe(offer.interId)">
-                                                        Rechazar
-                                                    </button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </ng-container>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true">
-                                </ngb-pagination>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<!-- Contenido de la pagina -->
+	<div id="page-content-wrapper">
+		<!-- Botón para cerrar el sidebar -->
+		<div class="container my-3" *ngIf="!isLoaded">
+			<app-load-spinner></app-load-spinner>
+		</div>
+		<div class="container mx-auto">
+			<div class="container-fluid my-3" *ngIf="isLoaded">
+				<div class="row justify-content-center">
+					<div class="col">
+						<!-- Cuerpo de las ofertas -->
+						<div class="card w-100 mb-4 shadow">
+							<div class="card-header bg-secondary">
+								<div class="d-flex align-items-center">
+									<h2 class="card-title text-white font-weight-bold my-2 mr-3">Mis ofertas</h2>
+									<input class="form-control ml-auto w-25" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Buscar" />
+								</div>
+							</div>
+							<div class="card-body mt-2">
+								<!-- Oferta -->
+								<div class="row">
+									<!-- Se muestra para las ofertas -->
+									<ngb-pagination class="col-12 mb-3" [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true"> </ngb-pagination>
+									<ng-container>
+										<div class="col-sm-6" *ngFor="let offer of offers | slice: (page - 1) * pageSize:page * pageSize | filter: searchText">
+											<div class="card m-2 mb-4 border-info shadow" *ngIf="offer.vacant > 0">
+												<div class="card-header bg-info text-white">
+													<h3 class="card-title font-weight-bolder border-bottom">{{ offer.name }}</h3>
+													<p class="mb-0">
+														<a class="badge badge-light text-info mr-3 mb-2 text-uppercase pull-right" (click)="viewCompany(offer.companyId)">
+															{{ offer.companyName }}
+														</a>
+														<span class="badge badge-light text-info mr-3 pull-right">
+															{{ offer.areaDescription }}
+														</span>
+													</p>
+												</div>
+												<div class="card-body">
+													<div class="row mb-4">
+														<div class="col">
+															<p class="text-primary">Fecha de finalización: {{ offer.endDate }}</p>
+															<p class="card-text">{{ offer.description }}</p>
+														</div>
+													</div>
+												</div>
+												<div class="card-footer p-0">
+													<div class="btn-group w-100">
+														<button *ngIf="offer.Joined_by == 0" type="button" title="Desinscribirse de oferta" class="btn btn-danger rounded-0" (click)="unsubscribe(offer.interId)">Desinscribirse</button>
+														<button *ngIf="offer.Joined_by == 1 && offer.interActive == 0" type="button" title="Aceptar oferta" class="btn btn-success rounded-0" (click)="acept(offer.interId)">Aceptar</button>
+														<button *ngIf="offer.Joined_by == 1" title="Desactivar usuario" type="button" class="btn btn-danger rounded-0" (click)="unsubscribe(offer.interId)">Rechazar</button>
+													</div>
+												</div>
+											</div>
+										</div>
+									</ng-container>
+								</div>
+							</div>
+							<div class="card-footer">
+								<ngb-pagination [(page)]="page" [pageSize]="pageSize" [collectionSize]="offers.length" [boundaryLinks]="true"> </ngb-pagination>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
