--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,49 +1,50 @@
-<div class="container  bg-light-dark ">
-    <div *ngIf="animate">
-        <app-load-spinner></app-load-spinner>
-    </div>
-    <div *ngIf="!animate" class="pt-4 row justify-content-center ">
-        <div class="col-md-4">
-            <div class="card ">
-                <div class="card-header bg-secondary text-center">
-                    <h2 class="card-title text-white mb-0">Acceso</h2>
-                </div>
-                <div class="card-body">
-                    <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input id="email" type="email" formControlName="email" class="form-control"
-                                [class]="isValidField('email')" />
-                            <div *ngIf="submitted && form.email.errors">
-                                <div>El correo: </div>
-                                <div *ngIf="form.email.errors.required">No puede estar vacío</div>
-                                <div *ngIf="form.email.errors.pattern">Dirección de correo no valida</div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input id="password" type="password" formControlName="password" class="form-control"
-                                [class]="isValidField('password')" />
-                            <div *ngIf="submitted && form.password.errors">
-                                <div>La contraseña: </div>
-                                <div *ngIf="form.password.errors.required">No puede estar vacío</div>
-                                <div *ngIf="form.password.errors?.min">Longuitud mínima 8 caracteres</div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-secondary ">
-                                    Enviar
-                                    <svg class="bi text-white" width="14" height="14" fill="currentColor">
-                                        <use xlink:href="bootstrap-icons.svg#save" />
-                                    </svg>
-                                </button>
-                            </div>
-                        </div>
-                        <div id="message">{{message}}</div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container bg-light-dark">
+	<div *ngIf="animate">
+		<app-load-spinner></app-load-spinner>
+	</div>
+	<div *ngIf="!animate" class="pt-4 row justify-content-center">
+		<div class="col-md-4">
+			<div class="card">
+				<div class="card-header bg-secondary text-center">
+					<h2 class="card-title text-white mb-0">Acceso</h2>
+				</div>
+				<div class="card-body">
+					<form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
+						<div class="form-group">
+							<label>Email</label>
+							<input id="email" type="email" formControlName="email" class="form-control" [class]="isValidField('email')" />
+							<div *ngIf="submitted && form.email.errors">
+								<div>El correo:</div>
+								<div *ngIf="form.email.errors.required">No puede estar vacío</div>
+								<div *ngIf="form.email.errors.pattern">Dirección de correo no valida</div>
+							</div>
+						</div>
+						<div class="form-group">
+							<label>Password</label>
+							<input id="password" type="password" formControlName="password" class="form-control" [class]="isValidField('password')" />
+							<div *ngIf="submitted && form.password.errors">
+								<div>La contraseña:</div>
+								<div *ngIf="form.password.errors.required">No puede estar vacío</div>
+								<div *ngIf="form.password.errors?.min">Longuitud mínima 8 caracteres</div>
+							</div>
+						</div>
+						<div>
+							<div class="text-center">
+								<button type="submit" class="btn btn-secondary">
+									Enviar
+									<svg class="bi text-white" width="14" height="14" fill="currentColor">
+										<use xlink:href="bootstrap-icons.svg#save" />
+									</svg>
+								</button>
+							</div>
+						</div>
+						<div class="text-center mt-1">
+							<a class="a" (click)="forgetPass()">He olvidado mi contraseña</a>
+						</div>
+						<div id="message">{{ message }}</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
