Envio desde gmail y con reset de password

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,8 +38,8 @@
 								</button>
 							</div>
 						</div>
-						<div class="text-center mt-1">
-							<a class="a" (click)="forgetPass()">He olvidado mi contraseña</a>
+						<div class="text-center mt-3">
+							<a class="button" (click)="forgetPass($event)" href="#">He olvidado mi contraseña</a>
 						</div>
 						<div id="message">{{ message }}</div>
 					</form>
