--- a/src/app/pages/alumno/view-profile/view-profile.component.html
+++ b/src/app/pages/alumno/view-profile/view-profile.component.html
@@ -1,24 +1,29 @@
 <div class="d-flex" id="wrapper">
-    <!-- Sidebar -->
-    <app-sidebar></app-sidebar>
-    <!-- Contenido de la pagina -->
-    <div id="page-content-wrapper">
-        <div class="container my-5" *ngIf="can == false">
-            <app-load-spinner></app-load-spinner>
-        </div>
-        <div class="container my-5" *ngIf="can == true">
-            <div class="row justify-content-center">
-                <div class="col-10">
-                    <div class="card">
-                        <div class="card-header bg-secondary ">
-                            <h2 class="card-title text-white mb-0">Perfil</h2>
-                        </div>
-                        <div class="card-body">
-                            <perfil-al [parent]="areas" [parent2]="data" [studentAreas]="studentAreas"></perfil-al>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<!-- Sidebar -->
+	<app-sidebar></app-sidebar>
+	<!-- Contenido de la pagina -->
+	<div id="page-content-wrapper">
+		<div class="container my-5" *ngIf="can == false">
+			<app-load-spinner></app-load-spinner>
+		</div>
+		<div class="container my-5" *ngIf="can == true">
+			<div class="row justify-content-center">
+				<div class="col-10">
+					<div class="card">
+						<div class="card-header bg-secondary">
+							<h2 class="card-title text-white mb-0">Perfil</h2>
+							<a class="rounded-circle position-absolute border border-white bg-secondary" (click)="newPdf()">
+								<svg class="bi text-white" width="32" height="32" fill="currentColor">
+									<use xlink:href="bootstrap-icons.svg#plus" />
+								</svg>
+							</a>
+						</div>
+						<div class="card-body">
+							<perfil-al [parent]="areas" [parent2]="data" [studentAreas]="studentAreas"></perfil-al>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
