Generar curriculum y listado correcto

--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -71,6 +71,11 @@
 															<use xlink:href="bootstrap-icons.svg#x" />
 														</svg>
 													</button>
+													<button type="button" class="btn btn-secondary rounded-0">
+														<svg class="bi" width="26" height="26" fill="currentColor" (click)="studentsList(offer.id, offer.name)">
+															<use xlink:href="bootstrap-icons.svg#file-earmark-plus" />
+														</svg>
+													</button>
 													<button type="button" class="btn btn-success rounded-0">
 														<svg class="bi" width="26" height="26" fill="currentColor" (click)="offerDesactive(offer.id)">
 															<use xlink:href="bootstrap-icons.svg#check-square" />
