Actualizar foto perfil empresa

--- a/src/app/pages/alumno/view-profile/view-profile.component.html
+++ b/src/app/pages/alumno/view-profile/view-profile.component.html
@@ -26,7 +26,7 @@
 									</div>
 								</div>
 								<div class="col-12 col-sm-8 col-md-4 mx-auto" *ngIf="change">
-									<button id="btnPhoto" type="submit" class="btn btn-secondary btn-block">Actualizar</button>
+									<button id="btnPhoto" type="button" class="btn btn-secondary btn-block">Actualizar</button>
 								</div>
 							</form>
 							<perfil-al [parent]="areas" [parent2]="data" [studentAreas]="studentAreas"></perfil-al>
